# ricq

./: .gitignore  Cargo.toml  README.md  build.rs
examples/password_login/: Cargo.toml
examples/password_login/src/: main.rs
examples/qrcode_login/: Cargo.toml
examples/qrcode_login/src/: main.rs
examples/ricq-axum-api/: Cargo.toml  README.md
examples/ricq-axum-api/src/: lib.rs  processor.rs  u8_protocol.rs
examples/ricq-axum-api/src/handler/: bot.rs  mod.rs  password.rs  qrcode.rs
examples/token_login/: Cargo.toml
examples/token_login/src/: main.rs
ricq/: Cargo.toml  README.md
ricq-core/: Cargo.toml  build.rs
ricq-core/src/: common.rs  error.rs  hex.rs  lib.rs  structs.rs  wtlogin.rs
ricq-core/src/binary/: binary_reader.rs  mod.rs  packet_writer.rs
ricq-core/src/command/: common.rs  mod.rs
ricq-core/src/command/config_push_svc/: decoder.rs  mod.rs
ricq-core/src/command/friendlist/: builder.rs  decoder.rs  mod.rs
ricq-core/src/command/group_anonymous_generate_nick/: decoder.rs
ricq-core/src/command/group_member_card/: builder.rs  decoder.rs
ricq-core/src/command/guild/: builder.rs  decoder.rs  dynamic_msg.rs  mod.rs
ricq-core/src/command/heartbeat/: builder.rs
ricq-core/src/command/img_store/: builder.rs  decoder.rs
ricq-core/src/command/long_conn/: builder.rs  decoder.rs  mod.rs
ricq-core/src/command/longmsg/: builder.rs
ricq-core/src/command/message_svc/: builder.rs  decoder.rs
ricq-core/src/command/multi_msg/: builder.rs  decoder.rs  mod.rs
ricq-core/src/command/oidb_svc/: builder.rs  decoder.rs  link.rs  mod.rs  music.rs  share.rs
ricq-core/src/command/online_push/: decoder.rs  mod.rs
ricq-core/src/command/profile_service/: builder.rs  decoder.rs  mod.rs
ricq-core/src/command/ptt_center_svr/: builder.rs  decoder.rs
ricq-core/src/command/ptt_store/: builder.rs  decoder.rs
ricq-core/src/command/reg_prxy_svc/: builder.rs  decoder.rs
ricq-core/src/command/signature/: builder.rs
ricq-core/src/command/stat_svc/: builder.rs
ricq-core/src/command/summary_card/: decoder.rs
ricq-core/src/command/visitor_svc/: builder.rs
ricq-core/src/command/wtlogin/: builder.rs  decoder.rs  mod.rs  tlv_reader.rs  tlv_writer.rs
ricq-core/src/crypto/: encrypt.rs  qqtea.rs
ricq-core/src/highway/: mod.rs
ricq-core/src/jce/: mod.rs
ricq-core/src/msg/: fragment.rs  macros.rs  mod.rs
ricq-core/src/msg/elem/: anonymous.rs  at.rs  face.rs  flash_image.rs  friend_image.rs  group_image.rs  light_app.rs  market_face.rs  mod.rs  reply.rs  rich_msg.rs  text.rs  video_file.rs
ricq-core/src/pb/: data.proto  mod.rs  pb.rs
ricq-core/src/pb/cmd0x346/: mod.rs
ricq-core/src/pb/cmd0x352/: mod.rs
ricq-core/src/pb/cmd0x388/: mod.rs
ricq-core/src/pb/cmd0x3bb/: mod.rs
ricq-core/src/pb/cmd0x6ff/: mod.rs  smbcmd0x519.proto  subcmd0x501.proto
ricq-core/src/pb/cmd0x899/: mod.rs
ricq-core/src/pb/guild/: GuildChannelBase.proto  GuildFeedCloudMeta.proto  GuildFeedCloudRead.proto  GuildWriter.proto  mod.rs  msgpush.proto  oidb0xf62.proto  synclogic.proto  unknown.proto
ricq-core/src/pb/longmsg/: mod.rs
ricq-core/src/pb/msf/: mod.rs
ricq-core/src/pb/msg/: head.proto  mod.rs  msg.proto  objmsg.proto  report.proto
ricq-core/src/pb/msgtype0x210/: mod.rs
ricq-core/src/pb/multimsg/: mod.rs
ricq-core/src/pb/notify/: group0x857.proto  mod.rs
ricq-core/src/pb/oidb/: mod.rs  oidb.proto  oidb0x6d6.proto  oidb0x6d8.proto  oidb0x769.proto  oidb0xb77.proto  oidb0xe07.proto
ricq-core/src/pb/online_status/: mod.rs
ricq-core/src/pb/profilecard/: busi.proto  mod.rs
ricq-core/src/pb/short_video/: mod.rs  short_video.proto
ricq-core/src/pb/sig_act/: mod.rs
ricq-core/src/pb/structmsg/: mod.rs  structmsg.proto
ricq-core/src/protocol/: device.rs  mod.rs  packet.rs  qimei.rs  sig.rs  transport.rs  version.rs
ricq-core/src/utils/: mod.rs  option_set.rs  utf8_to_string.rs
ricq-guild/: Cargo.toml  README.md  build.rs
ricq-guild/src/: lib.rs
ricq-guild/src/client/: builder.rs  decoder.rs  mod.rs  processor.rs
ricq-guild/src/protocol/: mod.rs
ricq-guild/src/protocol/protobuf/: GuildChannelBase.proto  GuildFeedCloudMeta.proto  GuildFeedCloudRead.proto  GuildWriter.proto  MsgResponsesSvr.proto  common.proto  msgpush.proto  oidb0xf62.proto  servtype.proto  synclogic.proto
ricq/src/: config.rs  lib.rs  qsign.rs
ricq/src/client/: client.rs  event.rs  mod.rs  net.rs  qimei.rs  tcp.rs
ricq/src/client/api/: friend.rs  group.rs  guild.rs  login.rs  mod.rs
ricq/src/client/handler/: mod.rs
ricq/src/client/highway/: codec.rs  net.rs
ricq/src/client/processor/: config_push_svc.rs  message_svc.rs  mod.rs  online_push.rs  reg_prxy_svc.rs  stat_svc.rs  wtlogin.rs
ricq/src/ext/: common.rs  image.rs  login.rs  mod.rs  reconnect.rs
ricq/src/structs/: image_info.rs  mod.rs  video_info.rs
rq-engine/: Cargo.toml  build.rs
rq-engine/src/: common.rs  error.rs  hex.rs  lib.rs  packet_builder.rs  structs.rs  wtlogin.rs
rq-engine/src/binary/: binary_reader.rs  binary_writer.rs  mod.rs
rq-engine/src/command/: common.rs  mod.rs
rq-engine/src/command/config_push_svc/: builder.rs  decoder.rs
rq-engine/src/command/friendlist/: builder.rs  decoder.rs  mod.rs
rq-engine/src/command/group_anonymous_generate_nick/: decoder.rs  mod.rs
rq-engine/src/command/group_member_card/: decoder.rs
rq-engine/src/command/img_store/: builder.rs  decoder.rs  mod.rs
rq-engine/src/command/long_conn/: builder.rs  (+2 more)
rq-engine/src/crypto/: encrypt.rs  qqtea.rs
rq-engine/src/highway/: mod.rs
rq-engine/src/jce/: mod.rs  test.rs
rq-engine/src/msg/: chain.rs  face.rs  fragment.rs  from.rs  into.rs  mod.rs  next.rs
rq-engine/src/packet_builder/: engine_traits.rs  transport_traits.rs
rq-engine/src/pb/: mod.rs
rq-engine/src/protocol/: device.rs  oicq.rs  packet.rs  sig.rs  transport.rs  version.rs
rs-qq/: Cargo.toml
rs-qq/src/: lib.rs  structs.rs
rs-qq/src/client/: api.rs  client.rs  event.rs  mod.rs  net.rs
rs-qq/src/ext/: image.rs  login.rs  reconnect.rs
rs-qq/src/internal/: image_info.rs  mod.rs
rs-qq/src/structs/: image_info.rs  mod.rs
(+353 files in other folders)
