[workspace]
members = [
    "rs-qq",
    "rq-engine",
    "examples/*"
]

[patch.crates-io]
prost = { git = "https://github.com/lz1998/prost" }
prost-types = { git = "https://github.com/lz1998/prost" }

[profile.release]
opt-level = 'z'
debug = false
lto = true
incremental = false
codegen-units = 1
strip = true
