[package]
name = "ricq-core"
version = "0.1.20"
edition = "2021"
description = "Packet encoders and decoders for ricq"
license = "MPL-2.0"
homepage = "https://github.com/lz1998/ricq"
repository = "https://github.com/lz1998/ricq"
keywords = ["qq", "protocol", "android", "mirai"]

[dependencies]
byteorder = "1"
bytes = "1"
derivative = "2"
flate2 = "1"
generic-array = "0.14"
jcers = { version = "0.1", features = ["derive"] }
md5 = "0.7"
p256 = { version = "0.10", features = ["ecdh"], default-features = false }
prost = { version = "0.9", features = ["std"], default-features = false }
prost-types = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[build-dependencies]
prost-build = "0.9"
