[package]
name = "ricq-core"
version = "0.1.20"
edition = "2021"
description = "Packet encoders and decoders for ricq"
license = "MPL-2.0"
homepage = "https://github.com/lz1998/ricq"
repository = "https://github.com/lz1998/ricq"
keywords = ["qq", "protocol", "android", "mirai"]

[dependencies]
byteorder.workspace = true
bytes.workspace = true
derivative.workspace = true
flate2.workspace = true
generic-array.workspace = true
jcers = { workspace = true, features = ["derive"] }
md5.workspace = true
p256 = { workspace = true, features = ["ecdh"], default-features = false }
prost = { workspace = true, features = ["std"], default-features = false }
prost-types.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
crypto-common.workspace = true
serde_json.workspace = true
block-padding = { workspace = true, features = ["std"] }
spki.workspace = true
base64.workspace = true
cbc = { workspace = true, features = ["alloc"] }
aes.workspace = true
rsa.workspace = true
x509-cert.workspace = true
chrono.workspace = true

[build-dependencies]
prost-build = "0.9"
