[package]
name = "ricq-guild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = { version = "0.9", features = ["std"], default-features = false }
prost-types = "0.9"
tracing = "0.1"
dynamic-protobuf = "0"
rand = "0"

[dependencies.ricq]
path = "../ricq"

[dependencies.ricq-core]
path = "../ricq-core"

[dependencies.tokio]
version = "1"
features = ["sync"]

[build-dependencies]
prost-build = "0.9"