[package]
name = "ricq-guild"
version = "0.1.20"
edition = "2021"
description = "ricq-guild"
license = "MPL-2.0"
homepage = "https://github.com/lz1998/ricq"
repository = "https://github.com/lz1998/ricq"
readme = "README.md"
keywords = ["qq", "protocol", "android", "mirai"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlc

[dependencies]
bytes = "1"
prost = { version = "0.9", features = ["std"], default-features = false }
prost-types = "0.9"
tracing = "0.1"
dynamic-protobuf = "0"
rand = "0"

[dependencies.ricq]
version = "=0.1.20"
path = "../ricq"

[dependencies.ricq-core]
version = "=0.1.20"
path = "../ricq-core"

[dependencies.tokio]
version = "1"
features = ["sync"]

[build-dependencies]
prost-build = "0.9"