[package]
name = "ricq"
version = "0.1.16"
edition = "2021"
description = "Android IM protocol"
license = "AGPL-3.0"
homepage = "https://github.com/lz1998/ricq"
repository = "https://github.com/lz1998/ricq"
readme = "README.md"
keywords = ["qq", "protocol", "android", "mirai"]

[features]
default = []
img-detail = ["image"]

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
md5 = "0.7"
flate2 = { version = "1", features = ["rust_backend"], default-features = false }
prost = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tracing = "0.1"
async-trait = "0.1"
cached = { version = "0.30", features = ["async"], default-features = false }
rand = "0.8"
derivative = "2"
jcers = { version = "0.1", features = ["derive"] }
ricq-core = { path = "../ricq-core", version = "0.1.16" }
image = { version = "0", features = ["png", "jpeg", "bmp", "gif", "webp"], optional = true }
