[package]
name = "rq-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
rand = "0.8"
chrono = "0.4"
p256 = { version = "0.10", features = ["ecdh"] }
serde = { version = "1", features = ["derive"] }
md5 = "0.7"
byteorder = "1"
generic-array = "0.14"
flate2 = { version = "1", features = ["rust_backend"], default-features = false }
thiserror = "1"
derivative = "2"
lazy_static = "1"

# patch due to permission of abnormal utf8
prost = "~0.9"
prost-types = "~0.9"

jcers = { version = "0.1", features = ["derive"] }

[build-dependencies]
prost-build = { version = "0.9" }

