[package]
name = "rs-qq"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
md5 = "0.7"
flate2 = { version = "1", features = ["rust_backend"], default-features = false }
prost = { version = "0.9", git = "https://github.com/lz1998/prost" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
lazy_static = "1"
async-trait = "0.1"
cached = "0.30"
rand = "0.8"
chrono = "0.4"
derivative = "2"
jcers = { version = "0.1", features = ["derive"] }
rq-engine = { path = "../rq-engine" }
image = { version = "0", features = ["png", "jpeg", "bmp", "gif", "webp"] }


