[package]
name = "token_login"
version = "0.1.0"
edition = "2021"


[dependencies]
rs-qq = { path = "../../rs-qq" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
tracing = "0.1"
futures = "0.3"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["fmt","local-time"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
bytes="1"